--- a/index.html
+++ b/index.html
@@ -54,35 +54,87 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <li class="nav-item menu-items ms-3">
+                        <a class="nav-link" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                    <li class="nav-item menu-items ms-3">
+                        <a class="nav-link" href="#">Breaking News</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                    <li class="nav-item menu-items ms-3">
+                        <a class="nav-link" href="#">Regular News</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
+                    <li class="nav-item menu-items ms-3">
+                        <a class="nav-link" href="#">International News</a>
+                    </li>
+                    <li class="nav-item menu-items ms-3">
+                        <a class="nav-link" href="#">Sports</a>
+                    </li>
+                    <li class="nav-item menu-items ms-3">
+                        <a class="nav-link" href="#">Entartaiment</a>
+                    </li>
+                    <li class="nav-item menu-items ms-3">
+                        <a class="nav-link" href="#">Culture</a>
+                    </li>
+                    <li class="nav-item menu-items ms-3">
+                        <a class="nav-link" href="#">Arts</a>
+                    </li>
+                    <li class="nav-item menu-items ms-3">
+                        <a class="nav-link" href="#">All News</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <!-- category end -->
-
+    <main class="main-body">
+        <section class="items-found pt-5 pb-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="item-text p-2">
+                            <h2 class="text-center"> items Found For Category International News</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pt-2 pb-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="sort d-flex">
+                            <div class="sort-text">
+                                <p>Sort By View :</p>
+                            </div>
+                            <div class="sort-functionality">
+                                <div class="dropdown">
+                                    <button class="btn btn-secondary dropdown-toggle ps-5 pe-5" type="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                        Default
+                                    </button>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 offset-md-4">
+                        <div class="sort-btn d-flex">
+                            <div class="sort-btn-1">
+                                <button class="btn btn-primary pick">Today's Pick</button>
+                            </div>
+                            <div class="sort-btn-1">
+                                <button class="btn btn-outline-primary trending">Trending</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
