--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>News Paper</title>
+    <title>World News</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/45403a4ccb.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -53,52 +54,32 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                <ul id="category-ul" class="navbar-nav mx-auto mb-2 mb-lg-0">
                     <li class="nav-item menu-items ms-3">
                         <a class="nav-link" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item menu-items ms-3">
-                        <a class="nav-link" href="#">Breaking News</a>
-                    </li>
-                    <li class="nav-item menu-items ms-3">
-                        <a class="nav-link" href="#">Regular News</a>
-                    </li>
-                    <li class="nav-item menu-items ms-3">
-                        <a class="nav-link" href="#">International News</a>
-                    </li>
-                    <li class="nav-item menu-items ms-3">
-                        <a class="nav-link" href="#">Sports</a>
-                    </li>
-                    <li class="nav-item menu-items ms-3">
-                        <a class="nav-link" href="#">Entartaiment</a>
-                    </li>
-                    <li class="nav-item menu-items ms-3">
-                        <a class="nav-link" href="#">Culture</a>
-                    </li>
-                    <li class="nav-item menu-items ms-3">
-                        <a class="nav-link" href="#">Arts</a>
-                    </li>
-                    <li class="nav-item menu-items ms-3">
-                        <a class="nav-link" href="#">All News</a>
-                    </li>
+
                 </ul>
             </div>
         </div>
     </nav>
     <!-- category end -->
     <main class="main-body">
-        <section class="items-found pt-5 pb-5">
+        <section id="found" class="items-found pt-5 pb-5 d-none">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="item-text p-2">
-                            <h2 class="text-center"> items Found For Category International News</h2>
+                            <h2 class="text-center" id="heading">No items Found For This Category</h2>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="pt-2 pb-5">
+        <section>
+
+        </section>
+        <section class="pt-5 pb-2">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
@@ -124,7 +105,8 @@
                     <div class="col-lg-4 offset-md-4">
                         <div class="sort-btn d-flex">
                             <div class="sort-btn-1">
-                                <button class="btn btn-primary pick">Today's Pick</button>
+                                <button class="btn btn-primary pick" type="button" data-bs-toggle="modal"
+                                    data-bs-target="#exampleModal">Today's Pick</button>
                             </div>
                             <div class="sort-btn-1">
                                 <button class="btn btn-outline-primary trending">Trending</button>
@@ -134,11 +116,26 @@
                 </div>
             </div>
         </section>
-    </main>
 
+        <section class="pt-5 pb-5">
+            <div class="news-section">
+                <div class="container">
+                    <div class="row">
+                        <div id="card-parent" class="col-lg-10 offset-lg-2">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer pt-3 pb-3">
+        <h5 class="text-center">Copyright 2022 World News</h5>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
