--- a/index.html
+++ b/index.html
@@ -116,7 +116,11 @@
                 </div>
             </div>
         </section>
-
+        <section>
+            <div class="spinner-grow text-info spinner-color" style="width: 3rem; height: 3rem;" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </section>
         <section class="pt-5 pb-5">
             <div class="news-section">
                 <div class="container">
