--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul id="category-ul" class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <li class="nav-item menu-items ms-3">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
-                    </li>
+
 
                 </ul>
             </div>
@@ -116,9 +114,12 @@
                 </div>
             </div>
         </section>
-        <section>
-            <div class="spinner-grow text-info spinner-color" style="width: 3rem; height: 3rem;" role="status">
-                <span class="visually-hidden">Loading...</span>
+        <section id="loader" class="d-none">
+            <div style="height:420px " class="d-flex justify-content-center text-warning align-items-center">
+                <div class="spinner-grow text-info spinner-color text-center" style="width: 3rem; height: 3rem;"
+                    role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
             </div>
         </section>
         <section class="pt-5 pb-5">
