--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item me-4  profile-1">
-                        <a class="nav-link active" aria-current="page" href="#">News</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">News</a>
                     </li>
                     <li class="nav-item profile-2">
-                        <a class="nav-link profile-2" href="#">Blog</a>
+                        <a class="nav-link profile-2" href="blog.html">Blog</a>
                     </li>
 
                 </ul>
