--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div class="sort-btn d-flex">
                             <div class="sort-btn-1">
                                 <button class="btn btn-primary pick" type="button" data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal">Today's Pick</button>
+                                    data-bs-target="#newsModal">Today's Pick</button>
                             </div>
                             <div class="sort-btn-1">
                                 <button class="btn btn-outline-primary trending">Trending</button>
@@ -114,6 +114,29 @@
                 </div>
             </div>
         </section>
+
+        <!-- Modal -->
+        <section>
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            ...
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="loader" class="d-none">
             <div style="height:420px " class="d-flex justify-content-center text-warning align-items-center">
                 <div class="spinner-grow text-info spinner-color text-center" style="width: 3rem; height: 3rem;"
