--- a/index.html
+++ b/index.html
@@ -92,9 +92,8 @@
                                         Default
                                     </button>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="#">Action</a></li>
-                                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                        <li><a class="dropdown-item" href="#">ascending </a></li>
+                                        <li><a class="dropdown-item" href="#">descending </a></li>
                                     </ul>
                                 </div>
                             </div>
