--- a/blog.html
+++ b/blog.html
@@ -24,11 +24,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item me-4  profile-1">
-                        <a class="nav-link active" aria-current="page" href="index.html">News</a>
+                    <li class="nav-item me-4">
+                        <a class="nav-link" aria-current="page" href="index.html">News</a>
                     </li>
-                    <li class="nav-item profile-2">
-                        <a class="nav-link profile-2" href="blog.html">Blog</a>
+                    <li class="nav-item active1">
+                        <a class="nav-link" href="blog.html">Blog</a>
+
                     </li>
 
                 </ul>
