--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <!-- topbar start -->
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container border-bottom pb-2">
+
+
             <a class="navbar-brand logo-text" href="#"><span class="logo me-2">World</span><span
                     class="logo-text-2">News</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -24,11 +26,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item me-4  profile-1">
-                        <a class="nav-link active" aria-current="page" href="index.html">News</a>
+                    <li class="nav-item me-4 active1">
+                        <a class="nav-link" id="news" aria-current="page" href="index.html">News</a>
                     </li>
-                    <li class="nav-item profile-2">
-                        <a class="nav-link profile-2" href="blog.html">Blog</a>
+                    <li class="nav-item">
+                        <a class="nav-link" id="blog" href="blog.html">Blog</a>
                     </li>
 
                 </ul>
@@ -48,11 +50,11 @@
     <!-- category start -->
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
+            </button> -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul id="category-ul" class="navbar-nav mx-auto mb-2 mb-lg-0">
 
